# g1t

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/g1t/: __init__.py  __main__.py  consts.py
src/g1t/cmd/: __init__.py  add.py  cat_file.py  check_ignore.py  checkout.py  commit.py  hash_object.py  ls_files.py  ls_tree.py  rm.py  show_ref.py  status.py  switch.py  tag.py
src/g1t/core/: branch.py  commit.py  config.py  ignore.py  index.py  object.py  repository.py  utils.py
src/g1t/presentation/converter/: commit.py  tree.py
src/g1t/presentation/dto/: __init__.py  commit.py  tree.py
src/g1t/presentation/echo/: commit.py  tree.py
src/test/: conftest.py  test_add.py  test_branch.py  test_cat_file.py  test_commit.py
