[project]
name = "g1t"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "umepon0626", email = "ryuichiastrona@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"g1t" = "g1t:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.5",
    "gin>=0.1.6",
    "pytest>=8.2.2",
    "gitpython>=3.1.43",
    "mypy>=1.10.1",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disable_error_code = "attr-defined"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/g1t"]
